# clang-format-all

./: Makefile  README.md  config.yaml  excludes.yaml  pyproject.toml
.github/workflows/: ci.yaml
src/clang_format_all/: __init__.py  clang_format_all.py
